--- a/ui/package.json
+++ b/ui/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "axios": "^1.6.2"
+    "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -20,4 +21,4 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   }
-} 
+}
