--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ python-dotenv==1.0.0
 fastapi==0.104.1
 uvicorn==0.24.0
 httpx==0.25.1
-playwright==1.39.0
+playwright>=1.39.0
 Pillow==10.1.0
 requests==2.31.0
 tqdm==4.66.1
